--- a/start_page.html
+++ b/start_page.html
@@ -1,82 +1,71 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" data-theme="light">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
+    <title>Gyeongjin's Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>My page title</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sonsie+One" rel="stylesheet" type="text/css">
-
-    <style>
-      :root {
-        --base-font-color: rgb(131,148,150);
-        --secondary-font-color: rgb(88,110,117);
-        --emphasised-font: rgb(147,161,161);
-
-        --c-background-color: rgb(0, 43, 54);
-        --c-background-highlights: rgb(7, 54, 66);
-
-        --c-yellow: rgb(181,137,  0);
-        --c-orange: rgb(203, 75, 22);
-        --c-red: rgb(220, 50, 47);
-        --c-magenta: rgb(211, 54,130);
-        --c-violet: rgb(108,113,196);
-        --c-blue: rgb(38,139,210);
-        --c-cyan: rgb(42,161,152);
-        --c-green: rgb(133,153,0);
-      }
-    </style>
-
+    <!-- External stylesheet -->
+    <link rel="stylesheet" href="styles.css" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sonsie+One" rel="stylesheet">
   </head>
 
   <body>
-    <!-- Here is our main header that is used across all the pages of our website -->
+    <!-- Header -->
+<header>
+  <h1>Header</h1>
+</header>
 
-    <header>
-      <h1>Header</h1>
-    </header>
-
-    <nav>
-      <ul>
+    <!-- Nav -->
+    <nav class="wrapper">
+      <ul class="topnav">
         <li><a href="#">Home</a></li>
         <li><a href="#">Our team</a></li>
         <li><a href="#">Projects</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
+    </nav>
 
-       <!-- A Search form is another common non-linear way to navigate through a website. -->
+    <!-- Search bar -->
+    <div class="wrapper">
+      <form class="search-form">
+        <input type="text" name="Search" placeholder="Search Query" />
+        <button type="submit">Search</button>
+      </form>
+    </div>
 
-       <form>
-         <input type="search" name="q" placeholder="Search query">
-         <input type="submit" value="Go!">
-       </form>
-     </nav>
-
-    <!-- Here is our page's main content -->
-    <main>
-
-      <!-- It contains an article -->
+    <!-- Main -->
+    <main class="wrapper two-col">
+      <!-- Article -->
       <article>
         <h2>Article heading</h2>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Donec a diam lectus. Set sit amet ipsum mauris. Maecenas congue ligula as quam viverra nec consectetur ant hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem lacinia consectetur.</p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Donec a diam lectus.
+          Maecenas congue ligula as quam viverra nec consectetur ant hendrerit. Donec et mollis dolor.
+          Praesent et diam eget libero egestas mattis sit amet vitae augue.
+          Here is an <a href="#">example article link</a>.
+        </p>
 
-        <h3>Subsection</h3>
+        <!-- Subsection 1 -->
+        <section class="subsection">
+          <h3>Subsection</h3>
+          <p>Donec ut libero sed accu vehicula ultricies a non tortor. Aenean ut gravida lorem.</p>
+          <p>Pelientesque auctor nisi id magna consequat sagittis. Curabitur dapibus, enim sit amet elit pharetra tincidunt.</p>
+        </section>
 
-        <p>Donec ut librero sed accu vehicula ultricies a non tortor. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aenean ut gravida lorem. Ut turpis felis, pulvinar a semper sed, adipiscing id dolor.</p>
-
-        <p>Pelientesque auctor nisi id magna consequat sagittis. Curabitur dapibus, enim sit amet elit pharetra tincidunt feugiat nist imperdiet. Ut convallis libero in urna ultrices accumsan. Donec sed odio eros.</p>
-
-        <h3>Another subsection</h3>
-
-        <p>Donec viverra mi quis quam pulvinar at malesuada arcu rhoncus. Cum soclis natoque penatibus et manis dis parturient montes, nascetur ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.</p>
-
-        <p>Vivamus fermentum semper porta. Nunc diam velit, adipscing ut tristique vitae sagittis vel odio. Maecenas convallis ullamcorper ultricied. Curabitur ornare, ligula semper consectetur sagittis, nisi diam iaculis velit, is fringille sem nunc vet mi.</p>
+        <!-- Subsection 2 -->
+        <section class="subsection">
+          <h3>Another subsection</h3>
+          <p>Donec viverra mi quis quam pulvinar at malesuada arcu rhoncus. In rutrum accumsan ultricies.</p>
+          <p>Mauris vitae nisi at sem facilisis semper ac in est. Vivamus fermentum semper porta.</p>
+        </section>
       </article>
 
-      <!-- the aside content can also be nested within the main content -->
+      <!-- Aside -->
       <aside>
         <h2>Related</h2>
-
         <ul>
           <li><a href="#">Oh I do like to be beside the seaside</a></li>
           <li><a href="#">Oh I do like to be beside the sea</a></li>
@@ -85,14 +74,11 @@
           <li><a href="#">Oh well...</a></li>
         </ul>
       </aside>
-
     </main>
 
-    <!-- And here is our main footer that is used across all the pages of our website -->
-
-    <footer>
-      <p>©Copyright 2050 by nobody. All rights reversed.</p>
+    <!-- Footer -->
+    <footer class="wrapper">
+      <p>©Copyright 2050 by Gyeongjin Lee. All rights reversed.</p>
     </footer>
-
   </body>
 </html>
